--- a/lib/better_errors/templates/main.erb
+++ b/lib/better_errors/templates/main.erb
@@ -34,11 +34,10 @@
         font-family: helvetica neue, lucida grande, sans-serif;
         line-height: 1.5;
         color: #333;
-        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
     }
 
     html {
-        background: #d7d7;
+        background: #b3e5fc;
     }
 
     .clearfix::after{
@@ -117,9 +116,9 @@
     }
 
     nav.sidebar {
-        background: #d3d3da;
-        border-top: solid 3px #a33;
-        border-bottom: solid 3px #a33;
+        background: #b3e5fc;
+        border-top: solid 3px #01579b;
+        border-bottom: solid 3px #01579b;
         border-radius: 4px;
         box-shadow: 0 0 6px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
     }
@@ -136,7 +135,7 @@
 
         overflow: hidden;
 
-        background-color: #20202a;
+        background-color: hotpink;
         color: #aaa;
         text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
         font-weight: 200;
@@ -169,7 +168,7 @@
 
     header.exception h2 strong {
         font-weight: 700;
-        color: #d55;
+        color: #ff6f00;
     }
 
     header.exception p {
@@ -230,7 +229,7 @@
     nav.tabs {
         border-bottom: solid 1px #ddd;
 
-        background-color: #eee;
+        background-color: #b3e5fc;
         text-align: center;
 
         padding: 6px;
@@ -299,7 +298,7 @@
     }
 
     ul.frames .method {
-        color: #966;
+        color: #ff6f00;
     }
 
     ul.frames .location {
@@ -314,7 +313,7 @@
 
     /* Selected frame */
     ul.frames li.selected {
-        background: #38a;
+        background: #c8e6c9;
         box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1), inset 0 2px 0 rgba(255, 255, 255, 0.01), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
     }
 
@@ -426,7 +425,7 @@
 
     /* Titlebar */
     .trace_info .title {
-        background: #f1f1f1;
+        background: #c8e6c9;
 
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
         overflow: hidden;
@@ -460,7 +459,7 @@
     }
 
     .trace_info .title .location a:hover {
-        border-color:#666666;
+        border-color: #c8e6c9;
     }
 
     .trace_info .title .name {
@@ -476,7 +475,7 @@
     }
 
     .code_linenums{
-        background:#f1f1f1;
+        background: #c8e6c9;
         padding-top:10px;
         padding-bottom:9px;
         float:left;
@@ -520,20 +519,24 @@
     }
 
     @-webkit-keyframes highlight {
-        0%   { background: rgba(220, 30, 30, 0.3); }
-        100% { background: rgba(220, 30, 30, 0.1); }
+        0%   {
+            background: #c8e6c9;
+            opacity: 0.7;
+            }
+        100% { background: #c8e6c9; opacity: 0.9;
+         }
     }
     @-moz-keyframes highlight {
-        0%   { background: rgba(220, 30, 30, 0.3); }
-        100% { background: rgba(220, 30, 30, 0.1); }
+        0%   { background: #c8e6c9;  opacity: 0.7; }
+        100% { background: #c8e6c9;  opacity: 0.9;}
     }
     @keyframes highlight {
-        0%   { background: rgba(220, 30, 30, 0.3); }
-        100% { background: rgba(220, 30, 30, 0.1); }
+        0%   { background: #c8e6c9;  opacity: 0.7;}
+        100% { background: #c8e6c9;  opacity: 0.9;}
     }
 
     .code .highlight, .code_linenums .highlight {
-        background: rgba(220, 30, 30, 0.1);
+        background: #c8e6c9;
         -webkit-animation: highlight 400ms linear 1;
         -moz-animation: highlight 400ms linear 1;
         animation: highlight 400ms linear 1;
